ff scrollbar bug fixed

--- a/content/css/ruote.css
+++ b/content/css/ruote.css
@@ -62,9 +62,6 @@ h3 {
 }
 #container {
 	background: #f1f1f1;
-	-webkit-box-shadow:  0px 0px 6px rgba(0,0,0,0.25);
-	-moz-box-shadow:     0px 0px 6px rgba(0,0,0,0.25);
-	box-shadow:          0px 0px 6px rgba(0,0,0,0.25);
 }
 #header {
 	padding: 24px 0;
